--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="zxx">
 
 <!-- Head -->
@@ -12,6 +12,20 @@
 <meta name="keywords" content="TravelPedia a Responsive Web Template, Bootstrap Web Templates, Flat Web Templates, Android Compatible Web Template, Smartphone Compatible Web Template, Free Webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //Meta-Tags -->
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5a12fb50198bd56b8c03c3ce/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 <!-- Custom-Stylesheet-Links -->
 <!-- Bootstrap-CSS -->	  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" media="all">
@@ -67,7 +81,7 @@
 }
 
 #myh4 {
-	color: #FFF;
+	color: #808080;
     /*font-weight: bold;*/
     /*font-size: 50px;*/
 	padding-top: 10px;
@@ -91,13 +105,25 @@
 }
 
 #inpbox {
-    width:20%;
+    width:100%;
     height: 47px;
     border-radius: 8px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-right: 20px;
+    border-color: #808080;
 }
+
+#inpboxR {
+    width:30%;
+    height: 47px;
+    border-radius: 8px;
+    display: inline-block;
+    margin-top: 10px;
+    margin-right: 20px;
+    border-color: #808080;
+}
+
 .newbtn {
     background-color: #4CAF50;
     border: none;
@@ -145,64 +171,76 @@
    color: #FFF;
 }
 
+
  .newbtn:hover{
     background-color: #3e8e49;
 }
 
 .newbtn2:hover{
    background-color: #3e8e49;
+   color: #FFF;
 }
 .myimg{
     background-image: url("/images/slide-4.jpg");
 }
 
+.akshay{
+    margin-right: 24.1em!important;
+}
+
+.bgimg {
+    background-image: url('{{tournew.url}}');
+    background-size: 1500px 1200px;
+}
 </style>
 <!-- style -->
 
 <!-- Body -->
 <body>
-    <div class="agileheader" id="agileitshome">
-        <div class="w3lsnavigation">
-            <nav class="navbar navbar-default agilehovereffect">
-    			<div class="navbar-header navbar-left">
-    				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-    					<span class="sr-only">Toggle navigation</span>
-    					<span class="icon-bar"></span>
-    				    <span class="icon-bar"></span>
-    					<span class="icon-bar"></span>
-    				</button>
-                    <div class="w3_navigation_pos">
-                        <a href="/">
-                            <img src="/images/logo.png" alt="TravelPedia">
-                            <h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
-                        </a>
-                    </div>
-    			</div>
+    <nav class="navbar navbar-default agilehovereffect" style="background-color: #000;">
+		<!-- <div class="navbar-header navbar-left"> -->
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+            <div class="w3_navigation_pos">
+                <a href="/">
+                    <img src="/images/logo.png" alt="TravelPedia">
+                    <h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
+                </a>
+            </div>
+		</div>
 
-    			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1" style="margin-left:20px;">
-    				<nav class="link-effect-2 wthreehovereffect" id="link-effect-2">
-    					<ul class="nav navbar-nav">
-    						<li><a class="scroll" href="#w3lsaboutaits"><span>ABOUT</span></a></li>
-    						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
-    						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-    						<li><a href="/tours"><span>TOURS</span></a></li>
-    						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
-    						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-    						{{#if user}}
-    						<li><a href="/users/logout"><span>LOG OUT</span></a></li>
-    						{{else}}
-    						<li><a href="/users/login"><span>LOG IN</span></a></li>
-    						{{/if}}
-    					</ul>
-    				</nav>
-    			</div>
-    		</nav>
-        </div>
-        <!-- other handlebars -->
-        {{{body}}}
-        <!-- end -->
-	</div>
+		<div>
+			<nav class="wthreehovereffect">
+				<ul class="nav navbar-nav">
+					<li><a href="#"><span>ABOUT</span></a></li>
+					<li><a href="#"><span>LOCATIONS</span></a></li>
+					<li><a href="#"><span>PACKAGES</span></a></li>
+                    <li><a href="#" style="width: 254px;"><span></span></a></li>
+					<li><a href="/tours"><span>TOURS</span></a></li>
+					<li><a href="#"><span>REVIEWS</span></a></li>
+                    {{#if user}}
+                    <li><a href="/users/profile"><span>{{user.username}}</span></a></li>
+                    {{else}}
+                    <li><a href="/users/login"><span>PROFILE</span></a></li>
+                    {{/if}}
+                    {{#if user}}
+                    <li><a href="/users/logout"><span>LOG OUT</span></a></li>
+                    {{else}}
+                    <li><a href="/users/login"><span>LOG IN</span></a></li>
+                    {{/if}}
+				</ul>
+			</nav>
+		</div>
+	</nav>
 	<!-- //Header -->
+
+    <!-- other handlebars -->
+    {{{body}}}
+    <!-- end -->
 
     <!-- Footer -->
 	<div class="agilefooterwthree" id="agilefooterwthree">
